if(QIEC60870_BUILD_TEST)
	add_executable(iec101_test)
	target_sources(iec101_test PRIVATE iec101_link_layer_frame_test.cpp)
	target_include_directories(iec101_test PRIVATE .)
	target_include_directories(iec101_test PRIVATE ${IEC60870_BUILD_ROOT}/thrd/googletest/include)
	target_link_directories(iec101_test PRIVATE ${IEC60870_BUILD_ROOT}/thrd/googletest/lib)
	target_link_libraries(iec101_test debug gtest_maind optimized gtest_main)
	target_link_libraries(iec101_test debug gmock_maind optimized gmock_main)
endif()
